[package]
name = "test_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
base64 = "0.22.1"
bytes = "1.11.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.43", features = ["serde"] }
dashmap = "6.1.0"
jwt-simple = { version = "0.12.14", default-features = false, features = ["pure-rust"] }
mime_guess = "2.0.5"
oneshot = "0.1.13"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
serde_with = "3.16.1"
sha1 = "0.10.6"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "migrate", "macros", "chrono"] }
sqlx-db-tester = "0.7.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.32"
